--- a/data/common.yaml
+++ b/data/common.yaml
@@ -18,6 +18,7 @@ asterisk::iax_general:
   autokill: 'yes'
   # Some added security default options
   delayreject: 'yes'
+asterisk::pjsip_general: []
 asterisk::sip_general:
   disallow: []
   allow: []
